src/components/MortgagesPageMain/MortgagesPageMain.module.scss
.mainContainer {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  flex-direction: column;
  font-family: "Cabin", sans-serif;
  margin-top: 2rem;
  gap: 2rem;
  text-wrap: pretty;
}

.mainHeader {
  font-family: "AlegreyaSans", sans-serif;
  font-size: clamp(1.5rem, 5vw, 3rem);
  margin-bottom: 3rem;

  @media (max-width: 1150px) {
    align-self: center;
    margin-left: 0;
  }
}

.innerContainer {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 5vw;
  margin-bottom: 7rem;
  max-width: 85rem;
  margin-inline: auto;
  padding-inline: 2rem;

  @media (max-width: 1150px) {
    flex-direction: column;
    gap: 5rem;
  }
}

.textContainer {
  width: 50%;

  @media (max-width: 1150px) {
    width: 100%;
  }
}

.textContainer {
  line-height: 32px;
  letter-spacing: 1px;

  p {
    margin-top: 1rem;
  }
}

.benefitsSection {
  display: grid;
  overflow: hidden;
  width: 100%;
  grid-template-columns: 1fr 1fr;
  background-color: var(--white);

  @media (max-width: 1150px) {
    grid-template-columns: 1fr;
  }
}

.cloversImage {
  height: 100%;
  object-fit: cover;

  @media (max-width: 1150px) {
    height: 15rem;
    width: 100%;
  }
}

.benefitsList {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  flex-direction: column;
  height: 100%;
  list-style: none;
  overflow: hidden;
}

:root {
  scroll-timeline: --page-scroll block;
}

.benefitItem {
  position: relative;
  display: grid;
  grid-template-columns: 20% 1fr;
  grid-template-rows: 3rem 1fr;
  grid-template-areas:
    "icon header"
    "icon text";
  margin: 2rem;
  line-height: 40px;
  align-self: stretch;
  transform: translateX(-15%);
  opacity: 0;

  &:nth-child(1) {
    animation: fadeIn1 2s linear forwards;
    animation-timeline: --page-scroll;
  }
  &:nth-child(2) {
    animation: fadeIn2 2s linear forwards;
    animation-timeline: --page-scroll;
  }
  &:nth-child(3) {
    animation: fadeIn3 2s linear forwards;
    animation-timeline: --page-scroll;
  }

  &:hover {
    .benefitItemHeader {
      color: var(--accent-color-teal);
    }

    .benefitIconContainer {
      background-color: var(--accent-color-teal);
      transform: scale(0.95);
      animation: boxShadowPulse 1s ease-in-out 75ms;

      &::before {
        animation: pulseEffect 1.5s ease-out 75ms;
      }
    }
  }
}

@keyframes pulseEffect {
  0% {
    opacity: 0.3;
  }
  40% {
    opacity: 0.5;
  }
  100% {
    transform: scale(1.5);
    opacity: 0;
  }
}

@keyframes boxShadowPulse {
  0% {
    box-shadow: 0 0 0 var(--accent-color-teal);
  }
  50% {
    box-shadow: 0 0 75px var(--accent-color-teal);
  }
  100% {
    box-shadow: 0 0 100px var(--white);
  }
}

@keyframes fadeIn1 {
  25% {
    transform: translateX(-15%);
    opacity: 0;
  }
  50% {
    transform: translate(0);
    opacity: 1;
  }
  100% {
    transform: translate(0);
    opacity: 1;
  }
}

@keyframes fadeIn2 {
  35% {
    transform: translateX(-15%);
    opacity: 0;
  }
  50% {
    transform: translate(0);
    opacity: 1;
  }
  100% {
    transform: translate(0);
    opacity: 1;
  }
}

@keyframes fadeIn3 {
  45% {
    transform: translateX(-15%);
    opacity: 0;
  }
  55% {
    transform: translate(0);
    opacity: 1;
  }
  100% {
    transform: translate(0);
    opacity: 1;
  }
}

.benefitIconContainer {
  position: relative;
  min-height: 3rem;
  height: 5vw;
  min-width: 3rem;
  width: 5vw;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  grid-area: icon;
  align-self: center;
  justify-self: center;
  background-color: var(--dark-grey);
  transition: all 0.3s ease-in-out;
  z-index: 1;
  transform-style: preserve-3d;

  svg {
    fill: var(--white);
    height: 75%;
  }

  g,
  svg {
    stroke: var(--white);
  }

  &::before {
    position: absolute;
    width: 100%;
    height: 100%;
    border-radius: 50%;
    content: "";
    background-color: hsla(0, 0%, 100%, 0.66);
    top: 0;
    left: 0;
    opacity: 0;
    z-index: -1;
    transform: scale(0.95);
  }
}

.benefitItemHeader {
  font-family: "AlegreyaSans", sans-serif;
  font-size: clamp(1.3rem, 2vw, 1.6rem);
  grid-area: header;
  transition: all 0.3s ease-in-out;
}

.benefitItemText {
  font-size: clamp(1rem, 2vw, 1.1rem);
  grid-area: text;
}

